Support 100% zoom level in tree viewer. (#1123)
* Support 100% zoom level in tree viewer.

* Fix GUI tests

* Remove unused methods

* Cleanup diffs

* Fix GUI tests

* Fix Legend item positioning

* Update icon image format

--- a/src/corelibs/U2Gui/U2Gui.qrc
+++ b/src/corelibs/U2Gui/U2Gui.qrc
@@ -159,8 +159,12 @@
         <file>images/unload_document.png</file>
         <file>images/warning_notification.png</file>
         <file>images/wrap_sequence.png</file>
+        <file>images/zoom_1_1.png</file>
         <file>images/zoom_in.png</file>
+        <file>images/zoom_in_tree.png</file>
+        <file>images/zoom_fit.png</file>
         <file>images/zoom_out.png</file>
+        <file>images/zoom_out_tree.png</file>
         <file>images/zoom_reg.png</file>
         <file>images/zoom_rows.png</file>
         <file>images/zoom_sel.png</file>
