UGENE-7789 Support tip shapes in Tree Viewer (#1128)
* Support tip node shapes

* Tip node check GUI test

* Fix GUI tests

--- a/src/corelibs/U2View/src/ov_msa/phy_tree_tab/TreeOptionsWidget.ui
+++ b/src/corelibs/U2View/src/ov_msa/phy_tree_tab/TreeOptionsWidget.ui
@@ -437,7 +437,14 @@
       <item>
        <widget class="QCheckBox" name="showNodeShapeCheck">
         <property name="text">
-         <string>Show nodes</string>
+         <string>Node shapes</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="showTipShapeCheck">
+        <property name="text">
+         <string>Tip shapes</string>
         </property>
        </widget>
       </item>
