Improve sequence stats widget UX (#1129)
* Improve UI sequence stats widget

* Fix GUI tests

--- a/src/corelibs/U2Gui/U2Gui.qrc
+++ b/src/corelibs/U2Gui/U2Gui.qrc
@@ -64,6 +64,7 @@
         <file>images/font.png</file>
         <file>images/font_default.png</file>
         <file>images/forward.png</file>
+        <file>images/gear.svg</file>
         <file>images/gobject.png</file>
         <file>images/goto.png</file>
         <file>images/graphs.png</file>
