UGENE-7521. [WA] "Export as image" option does not work for wrap mode (#1136)
* Support MSA image export in multi-line mode.

* UGENE-7521. GUI test

* UGENE-7521. GUI test

* GUI test cleanup

--- a/src/corelibs/U2View/src/ov_msa/export_image/MSAExportSettings.ui
+++ b/src/corelibs/U2View/src/ov_msa/export_image/MSAExportSettings.ui
@@ -6,34 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>291</width>
-    <height>101</height>
+    <width>522</width>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="sizeConstraint">
-    <enum>QLayout::SetMinAndMaxSize</enum>
-   </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
-     <property name="sizeConstraint">
-      <enum>QLayout::SetMinAndMaxSize</enum>
-     </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
@@ -79,7 +61,7 @@
    <item>
     <widget class="QCheckBox" name="exportSeqNames">
      <property name="text">
-      <string>Include sequences' names</string>
+      <string>Include names</string>
      </property>
     </widget>
    </item>
@@ -100,8 +82,62 @@
      </property>
     </widget>
    </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QCheckBox" name="multilineModeCheckbox">
+       <property name="text">
+        <string>Bases per line (multiline image):</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="multilineWidthSpinbox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>1000</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>multilineModeCheckbox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>multilineWidthSpinbox</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>137</x>
+     <y>143</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>303</x>
+     <y>143</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
