Remove branch settings filler from GUI tests (#1147)
* Remove BranchSettingsDialog filler and fix the corresponding tests.

* Remove BranchSettingsDialog

* Remove BranchSettingsDialog

* Improve comment

--- a/src/corelibs/U2View/src/ov_msa/phy_tree_tab/TreeOptionsWidget.ui
+++ b/src/corelibs/U2View/src/ov_msa/phy_tree_tab/TreeOptionsWidget.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>238</width>
-    <height>869</height>
+    <height>886</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -249,6 +249,7 @@
               <widget class="QToolButton" name="boldAttrButton">
                <property name="font">
                 <font>
+                 <weight>75</weight>
                  <bold>true</bold>
                 </font>
                </property>
@@ -279,6 +280,7 @@
               <widget class="QToolButton" name="underlineAttrButton">
                <property name="font">
                 <font>
+                 <weight>50</weight>
                  <italic>false</italic>
                  <bold>false</bold>
                  <underline>true</underline>
