UGENE-7837 Add "commercial sources" to the "Restriction sites" dialog and make possible to filter by them (#1224)
* UGENE-7837 fix

* UGENE-7837 fix linux build

* UGENE-7837 review fix

* UGENE-7837 fix

* UGENE-7837 fix

* UGENE-7837 fix

* UGENE-7837 fix

--- a/src/plugins/enzymes/src/EnzymesSelectorWidget.ui
+++ b/src/plugins/enzymes/src/EnzymesSelectorWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>659</width>
-    <height>341</height>
+    <height>346</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -99,6 +99,11 @@
         <column>
          <property name="text">
           <string>Organizm / Details</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Suppliers</string>
          </property>
         </column>
        </widget>
