UGENE-7834 Add link to database in the "Access remote databases..." dialog (#1269)
* UGENE-7834 Add link to database in the Access remote databases... dialog

* UGENE-7834 fix

* UGENE-7834 fix

* UGENE-7834 test fix

--- a/src/corelibs/U2Gui/U2Gui.qrc
+++ b/src/corelibs/U2Gui/U2Gui.qrc
@@ -60,6 +60,7 @@
         <file>images/error_notification.png</file>
         <file>images/expand_tree.png</file>
         <file>images/extract_assembly_region.png</file>
+        <file>images/external_link.png</file>
         <file>images/find_dialog.png</file>
         <file>images/font.png</file>
         <file>images/font_default.png</file>
